--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit==1.37.0
+streamlit==1.37.1
+pandas==2.2.2
+gspread==6.1.2
+google-auth==2.31.0
 sqlalchemy>=2.0
 psycopg[binary,pool]>=3.2
-pandas
-pypdf
 requests
+pypdf
