--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ xlsxwriter>=3.2.0   # to_excel 다운로드용 (선택)
 gspread>=6.1.2
 google-auth>=2.31.0
 gspread-dataframe>=3.3.1  # DataFrame↔시트 편리 (선택)
+google-auth-oauthlib>=1.2
 
 # (선택) CSV/Parquet 속도 개선
 pyarrow>=16.1.0
@@ -21,3 +22,4 @@ pyarrow>=16.1.0
 # 기타
 requests>=2.32
 pypdf>=4.3.1
+
