--- a/.github/workflows/wakeup.yml
+++ b/.github/workflows/wakeup.yml
@@ -2,14 +2,29 @@ name: Wake up Streamlit
 
 on:
   schedule:
-    # 매일 KST 07:00 = UTC 22:00 (전날)
-    - cron: "0 22 * * *"
+    - cron: "0 22 * * *"   # KST 07:00 (UTC 22:00)
   workflow_dispatch:
 
 jobs:
   wakeup:
     runs-on: ubuntu-latest
     steps:
-      - name: Request Streamlit app
+      - name: Wake up multiple Streamlit apps
+        shell: bash
         run: |
-          curl -I -L --max-time 30 "YOUR_STREAMLIT_APP_URL"
+          URLS=(
+            "https://hismedi-app-nlyfdy5m68hfmnafchqbrr.streamlit.app/"
+            "https://hismedi-app-akdbdih2rgeo5pzzkvj2ig.streamlit.app/"
+            "https://hismedi-app-a3cyqhakd7fpgnnn3ugezs.streamlit.app/"
+            "https://hismedi-app-h6jc8egutxhnhafthftq89.streamlit.app/"
+            "https://hisnews-p6tawcdhd7g2xrfgutathk.streamlit.app/"
+          )
+
+          FAIL=0
+          for URL in "${URLS[@]}"; do
+            echo "==> Waking up: $URL"
+            # -L: 리다이렉트 따라감, --retry: 일시 오류 재시도
+            curl -I -L --max-time 60 --retry 3 --retry-delay 5 "$URL" || FAIL=1
+          done
+
+          exit $FAIL
